add alt attribute

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <form class="landing__text__form">
   <label for="email" class="visually__hidden">Email Address</label>
   <input type="email" id="email" placeholder="Email Address" class="landing__text__email">
-  <button type="submit" class="landing__text__button" id="signup"><img src="images/icon-arrow.svg"> <span class="visually__hidden">Submit</span></button>
+  <button type="submit" class="landing__text__button" id="signup"><img src="images/icon-arrow.svg" alt=""> <span class="visually__hidden">Submit</span></button>
 </form>
 <p class="hidden signup__form__warning" id="emailWarning">Please provide a valid email</p>
 
